修改一些错误,删除不必要的文件
