# docs/swagger.json
@@ -171,9 +171,9 @@
                 }
             }
         },
-        "/demo/bind": {
-            "post": {
-                "description": "测试数据绑定",
+        "/service/delete": {
+            "get": {
+                "description": "服务删除",
                 "consumes": [
                     "application/json"
                 ],
@@ -181,19 +181,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户"
+                    "服务管理"
                 ],
-                "summary": "测试数据绑定",
-                "operationId": "/demo/bind",
+                "summary": "服务删除",
+                "operationId": "/service/delete",
                 "parameters": [
                     {
-                        "description": "body",
-                        "name": "polygon",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.DemoInput"
-                        }
+                        "type": "string",
+                        "description": "服务id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -208,7 +206,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/dto.DemoInput"
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -331,28 +329,6 @@
             "properties": {
                 "password": {
                     "description": "密码",
-                    "type": "string",
-                    "example": "123456"
-                }
-            }
-        },
-        "dto.DemoInput": {
-            "type": "object",
-            "required": [
-                "age",
-                "name",
-                "passwd"
-            ],
-            "properties": {
-                "age": {
-                    "type": "integer",
-                    "example": 20
-                },
-                "name": {
-                    "type": "string",
-                    "example": "姓名"
-                },
-                "passwd": {
                     "type": "string",
                     "example": "123456"
                 }
